Clean up appendices

--- a/appendix.tex
+++ b/appendix.tex
@@ -4,9 +4,18 @@
 % Appendices
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
+% Electronic schematics
+%
+\section{Electronic schematics}
+\subsection*{Control box schematics}
+%\includegraphics[width=\linewidth]{figures/pulserhead_schematic.png}
+\subsection*{Pulserhead schematics}
+\includegraphics[width=\linewidth]{figures/pulserhead_schematic.png}
+%
 % Control codes
 %
 \section{Internal control codes}
+\ref{app:internal_codes_design}
 The control box will has an integral Raspberry Pi computer running the control program (written in python). The Raspberry Pi is accessible remotely via Ethernet. A USB port for direct control via a laptop is available.
 
 The control codes are given here for reference (although it is recommended to use the python code available):
@@ -37,7 +46,9 @@ Output can be stopped at any time with ‘x’.
 %
 % Pulser head encapsulation design
 %
-\section{Pulser head encapsulation design}
-\vspace{-2cm}
-\includepdf{figures/Pulser_Type2_Base_V2.PDF}
-\includepdf{figures/Pulser_Type2_Tube.PDF}
+\section{Pulserhead encapsulation design}
+\ref{app:pulserhead_design}
+\subsection*{Pulserhead base}
+\includegraphics[width=\linewidth]{figures/pulserhead_base.png}
+\subsection*{Pulserhead tube}
+\includegraphics[width=\linewidth]{figures/pulserhead_tube.png}
