--- a/commissioning.tex
+++ b/commissioning.tex
@@ -8,13 +8,13 @@
 
 \subsubsection*{Initial commissioning}
 
-The nanopulser optical calibration system (serial nr OP\_12\_420\_2\_355) has been tested at the University of Sussex in February 2019, and the results of this are shown in Table~\ref{table:sussex_commissioining}.
+The nanopulser optical calibration system (serial nr OP\_12\_420\_2\_355) has been tested at the University of Sussex in February 2019, and the results of this are shown in Table~\ref{table:sussex_commissioning}.
 
 The system was then shipped to Japan and tested again for functionality at the \jsns lab in the KEK building at J-PARC. The system was found to be working as expected, expect for pulserhead 7. This was replaced with a spare one (programmed to reflect the position), which worked correctly.
 
 \begin{table}[h!]
   \begin{center}
-    \caption{Results of the commissioning at the University of Sussex. The measurements are only relative: settings indicated are for which the trigger pulser and the light pulse were observed at the same time, using the specific test set-up at Sussex; the amplitude was as measured with a Hamatsu mini-PMT with mylar filter using the maximum light output setting.}
+    \caption{Results of the commissioning at the University of Sussex. The measurements are only relative: settings indicated are for which the trigger pulser and the light pulse were observed at the same time, using the specific test set-up at Sussex. The amplitude was as measured with a Hamatsu mini-PMT with mylar filter using the maximum light output setting. Note that the quantum efficiency for the UV LEDs, pulserheads 2 and 13, is much lower.}
     \label{table:sussex_commissioning}
     \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|} 
 	\hline
@@ -27,6 +27,7 @@ The system was then shipped to Japan and tested again for functionality at the \
 			 & head    & delay & length & (V) 
                     & head    & delay & length & (V) \\
 	Branch    & & & delay & & & & delay & & & & delay & \\
+	             & & (ns) & (ns) & & & (ns) & (ns) & & & (ns) & (ns) & \\
        \hline 
 	1 & 1 & 810 & 21 & 2.7 & 2 & 830 & 18 & 1.1 & 3 & 815 & 7 & 1.8 \\
 	2 & 4 & 795 & 7  & 3.5 & 5 & 810 & 19 & 5.0 & & & & \\
@@ -46,4 +47,15 @@ The following tasks still remain for commissioning:
 \item Estimate the delay needed for the system once installed.
 \item Confirm the settings of Table~\ref{table:sussex_commissioning} and find the values for the estimated delay between optical pulse and the trigger. Try to get the all channels as close as possible. Note the (estimated) magnitude of (any) trigger jitter, if observed.
 \item Find the optical range for each channel - the minimal pulse is around pulse height setting 10,000. Find the actual minimal value and note the pulse integral observed in the PMT used, as well as the pulse integral when using the maximum value pulse height setting.
+\end{itemize}
+
+\subsubsection*{Analysis methods}
+
+The calibration of the system is done in the lab. Experience shows, that once installed in the experiment, things change - generally both due to changes in the system as well as due to different routing and noise environment. Therefore, the system will need to be recalibrated, or at least verified in analysis.
+
+The following tasks are envisaged:
+\begin{itemize}
+\item 
+\item
+\item 
 \end{itemize}
