--- a/nanopulser.bib
+++ b/nanopulser.bib
@@ -30,6 +30,6 @@ year = {2017}
 @misc{GITHUB_TEST,
   author = {Mark Stringer},
   title = {{Operation and performance of the \jsns driver system}},
-  howpublished = "\url{https://github.com/Sussex-Invisibles/JSNS2PulserControl}",
+  howpublished = "\url{https://github.com/Sussex-Invisibles/JSNS2PulserControl} (legacy software, for reference only)",
   year = {2018}
 }
