Various edits, and small clarifications

--- a/appendix.tex
+++ b/appendix.tex
@@ -7,6 +7,7 @@
 % Electronic schematics
 %
 \section{Electronic schematics}
+\label{app:schematics}
 \subsection*{Control box schematics}
 %\includegraphics[width=\linewidth]{figures/pulserhead_schematic.png}
 \subsection*{Pulserhead schematics}
@@ -15,7 +16,7 @@
 % Control codes
 %
 \section{Internal control codes}
-\ref{app:internal_codes_design}
+\label{app:internal_codes_design}
 The control box will has an integral Raspberry Pi computer running the control program (written in python). The Raspberry Pi is accessible remotely via Ethernet. A USB port for direct control via a laptop is available.
 
 The control codes are given here for reference (although it is recommended to use the python code available):
@@ -47,7 +48,7 @@ Output can be stopped at any time with ‘x’.
 % Pulser head encapsulation design
 %
 \section{Pulserhead encapsulation design}
-\ref{app:pulserhead_design}
+\label{app:pulserhead_design}
 \subsection*{Pulserhead base}
 \includegraphics[width=\linewidth]{figures/pulserhead_base.png}
 \subsection*{Pulserhead tube}
