--- a/nanopulser.bib
+++ b/nanopulser.bib
@@ -22,7 +22,7 @@ year = {2017}
 
 @misc{GITHUB_SOFT,
   author = {James Waterfield},
-  title = {{\jsns nanopulser PIC programming software and code}},
+  title = {{\jsns nanopulser control software}},
   howpublished = "\url{https://github.com/sjmpeeters/JSNS2_nanopulser_control_software.git}",
   year = {2019}
 }
@@ -30,6 +30,26 @@ year = {2017}
 @misc{GITHUB_TEST,
   author = {Mark Stringer},
   title = {{Operation and performance of the \jsns driver system}},
-  howpublished = "\url{https://github.com/Sussex-Invisibles/JSNS2PulserControl} (legacy software, for reference only)",
+  howpublished = "\url{https://github.com/Sussex-Invisibles/JSNS2PulserControl} (includes legacy control software, however, this for reference only)",
   year = {2018}
+}
+
+@misc{INTERFACE2,
+   title={Interface2 {L}td},
+   howpublished={Unit 16, Euro Business Park, Newhaven, East Sussex, BN9 0DQ, UK (+44 12173 611008)}
+}
+
+@misc{BULGIN,
+   title={Bulgin Asia},
+   howpublished={Elektron Technology Pte Ltd, 3 Temasek Avenue, Centennial Tower, Level 34, Singapore, 039190 (+65 65497161, info@bulgin.com)}
+}
+
+@misc{TRP,
+   title={{TRP} polymer solutions},
+   howpublished="\url{https://trp.co.uk/products/high-performance-elastomer-o-rings/}"
+}
+
+@misc{WELDON,
+	title={{SCIGRIP IPS WELD ON}~42 Clear Low VOC Acrylic Adhesive 10:1 50ml},
+	howpublished="\url{https://scigrip.com/assets/tds/SG-42_TDS-1112.pdf}"
 }
